# live-odds-monitor

./: .gitignore  analysis.ipynb  pyproject.toml  requirements.txt  tox.ini
docs/database/: README.md  data-flow.md  schema.md  scripts.md
scripts/: analyze.py  backfill.py  watch_live.py
src/live_odds_monitor/: __init__.py  config.py  data_store.py
src/live_odds_monitor/api/: odds_api.py
src/live_odds_monitor/core/: alerts.py  monitor.py  tracker.py
src/live_odds_monitor/db/: models.py  storage.py
